# info-gen

./: .gitignore  README.md  make-man.txt  makefile  pyproject.toml
src/: colors_test.py  fake.py  location_test.py  main.py  man.txt  pytypes.py  typo_test.py
src/generators/: __init__.py  address.py  color.py  phone.py  ssn.py  typos.py
src/generators/address/: __init__.py  main.py  pytypes.py
src/generators/color/: main.py  pytypes.py
src/generators/name/: __init__.py  main.py  pytypes.py  vars.py
src/generators/typos/: main.py  pytypes.py
src/typo/: main.py  types.py  vars.py
src/utils/: __init__.py  colors.py  component.py  location.py  math.py  types.py
src/utils/colors/: main.py
