[project]
name = "InformationGenerator"
version = "0.1.0"
description = "Generate personal information with either a guarantee or reasonable expectation that it does not conflict with real people."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "us>=3.2.0",
    "uszipcode>=1.0.1",
    "sqlalchemy-mate<2.0.0.1",
    "python-levenshtein>=0.27.3",
    "faker>=40.1.2",
    "nltk>=3.9.2",
    "scipy>=1.17.0",
    "faker-music>=0.4",
    "faker-vehicle>=0.2.0",
]
